syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/BlazeCoder04/online_store/services/user/pkg/user;user";

enum UserRole {
  USER = 0;
  ADMIN = 1;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  UserRole role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
